# ai_for_medicine

./: README.md  pyproject.toml  run_openai_generator.py
med_book/: Gut Microbiome  _
module_falcon/: falcon.py
module_mistral/: mistral_operator.py
module_openai/: README.md  openai.py  openai_async_operator.py  openai_module.py  openai_operator.py
prompts/: generic_prompts.py  microbiome_tests.py  utils.py
